Fixed color visibility for file size in Chat Info

--- a/FrontEnd/code/src/screens/MessageCenter/ChatInfo/parts/Files/Files.module.sass
+++ b/FrontEnd/code/src/screens/MessageCenter/ChatInfo/parts/Files/Files.module.sass
@@ -38,7 +38,7 @@
         +text-overflow
 
     .note
-        color: $n6
+        color: $n4
         +dark
             color: $n4
     svg
